# Learning_Qt_and_OpenCV

./: README.md  ch1设计图.epgz
Chapter-01/ImageViewer/ImageViewer/: CMakeLists.txt  main.cpp
Chapter-01/ImageViewer/ImageViewer/ImageViewer/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Chapter-01/ImageViewer/ImageViewer/build-ImageViewer-Qt_6_5_2_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
Chapter-01/ImageViewer/build-ImageViewer-Qt_6_5_2_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
Chapter-01/ImageViewer/build-ImageViewer-Qt_6_5_2_for_macOS-Debug/.qt/: QtDeploySupport.cmake
Chapter-01/ImageViewer/build-ImageViewer-Qt_6_5_2_for_macOS-Debug/.qtc_clangd/: compile_commands.json
Chapter-01/ImageViewer/build-ImageViewer-Qt_6_5_2_for_macOS-Debug/ImageViewer_autogen/: deps
Chapter-02/AffinePlugin/: AffinePlugin_global.h  CMakeLists.txt  affineplugin.cpp  affineplugin.h
Chapter-02/CartoonPlugin/: CMakeLists.txt  CartoonPlugin_global.h  cartoonplugin.cpp  cartoonplugin.h
Chapter-02/ErodePlugin/: CMakeLists.txt  erode_plugin.h
Chapter-02/ImageEditor/ImageEditor/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Chapter-02/ImageEditor/ImageEditor/plugins/: libErodePlugin.dylib
Chapter-02/ImageEditor/build-ImageEditor-Desktop_arm_darwin_generic_mach_o_64bit-MinSizeRel/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
Chapter-02/ImageEditor/build-ImageEditor-Desktop_arm_darwin_generic_mach_o_64bit-MinSizeRel/.qt/: QtDeploySupport.cmake
Chapter-02/RotatePlugin/: CMakeLists.txt  RotatePlugin_global.h  rotateplugin.cpp  rotateplugin.h
Chapter-02/SharpenPlugin/: CMakeLists.txt  sharpenplugin.cpp  sharpenplugin.h
Chapter-02/build-AffinePlugin-Desktop_arm_darwin_generic_mach_o_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  libAffinePlugin.1.dylib  libAffinePlugin.dylib
Chapter-02/build-AffinePlugin-Desktop_arm_darwin_generic_mach_o_64bit-Debug/.qt/: QtDeploySupport.cmake
Chapter-02/build-AffinePlugin-Desktop_arm_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/: compile_commands.json
Chapter-02/build-AffinePlugin-Desktop_arm_darwin_generic_mach_o_64bit-Debug/AffinePlugin_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
Chapter-02/build-CartoonPlugin-Desktop_arm_darwin_generic_mach_o_64bit-Debug/: CMakeCache.txt.prev  build.ninja  cmake_install.cmake
Chapter-02/build-CartoonPlugin-Desktop_arm_darwin_generic_mach_o_64bit-Debug/.qt/: QtDeploySupport.cmake
Chapter-02/build-CartoonPlugin-Desktop_arm_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/: compile_commands.json
Chapter-02/build-ErodePlugin-Desktop_arm_darwin_generic_mach_o_64bit-MinSizeRel/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  libErodePlugin.1.0.0.dylib  libErodePlugin.1.dylib
Chapter-02/build-ErodePlugin-Desktop_arm_darwin_generic_mach_o_64bit-MinSizeRel/.qt/: QtDeploySupport.cmake
Chapter-02/build-ErodePlugin-Desktop_arm_darwin_generic_mach_o_64bit-MinSizeRel/.qtc_clangd/: compile_commands.json
Chapter-02/build-ErodePlugin-Desktop_arm_darwin_generic_mach_o_64bit-MinSizeRel/ErodePlugin_autogen/: deps  moc_predefs.h
Chapter-02/build-ErodePlugin-Desktop_arm_darwin_generic_mach_o_64bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  libErodePlugin.1.0.0.dylib
Chapter-02/build-ErodePlugin-Desktop_arm_darwin_generic_mach_o_64bit-Release/.qt/: QtDeploySupport.cmake
Chapter-02/build-ErodePlugin-Desktop_arm_darwin_generic_mach_o_64bit-Release/.qtc_clangd/: compile_commands.json
Chapter-02/build-ErodePlugin-Desktop_arm_darwin_generic_mach_o_64bit-Release/ErodePlugin_autogen/: deps  mocs_compilation.cpp
Chapter-02/build-RotatePlugin-Desktop_arm_darwin_generic_mach_o_64bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
Chapter-02/build-RotatePlugin-Desktop_arm_darwin_generic_mach_o_64bit-Debug/.qt/: QtDeploySupport.cmake
Chapter-02/build-RotatePlugin-Desktop_arm_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/: compile_commands.json
Chapter-02/build-SharpenPlugin-Desktop_arm_darwin_generic_mach_o_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  libSharpenPlugin.dylib  qtcsettings.cmake
Chapter-02/build-SharpenPlugin-Desktop_arm_darwin_generic_mach_o_64bit-Debug/.qt/: QtDeploySupport.cmake
Chapter-02/build-SharpenPlugin-Desktop_arm_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/: compile_commands.json
Chapter-02/build-SharpenPlugin-Desktop_arm_darwin_generic_mach_o_64bit-Debug/SharpenPlugin_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
Chapter-03/: Gazer.epgz
Chapter-03/Gazer/: CMakeLists.txt  capturethread.cpp  capturethread.h  main.cpp  mainwindow.cpp  mainwindow.h  utilities.cpp  utilities.h
Chapter-03/build-Gazer-Desktop_arm_darwin_generic_mach_o_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
Chapter-03/build-Gazer-Desktop_arm_darwin_generic_mach_o_64bit-Debug/.qt/: QtDeploySupport.cmake
Chapter-03/build-Gazer-Desktop_arm_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/: compile_commands.json
Chapter-03/build-Gazer-Desktop_arm_darwin_generic_mach_o_64bit-Debug/Gazer_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
Chapter-04/Facetious/: CMakeLists.txt  capturethread.cpp  capturethread.h  image.qrc  mainwindow.cpp  mainwindow.h  utilities.cpp  utilities.h
Chapter-04/build-Facetious-Desktop_arm_darwin_generic_mach_o_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Chapter-04/build-Facetious-Desktop_arm_darwin_generic_mach_o_64bit-Debug/.qt/: QtDeploySupport.cmake
Chapter-04/build-Facetious-Desktop_arm_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/: compile_commands.json
Chapter-04/build-Facetious-Desktop_arm_darwin_generic_mach_o_64bit-Debug/Facetious_autogen/: deps  moc_predefs.h
(+1265 files in other folders)
